Zombono
Release Notes:

Version 0.1.0-pre1
June 29, 2024

NEW FEATURES:
	* The way that game assets get loaded has changed!
		* The game name and asset path are still loaded from the gameinfo.json file instead of being hardcoded by default
		* You can still use +set game <name> (or the equivalent alias of +set game_asset_path <name>) to change the name of the game
	* UIs are now stackable:
		* If a UI has its "stackable" field set using the UI_SetStackable function with the stackable parameter set to "true", the UI will enter into a stack.
			* UI_Push (as well as UI_SetEnabled) pushes the current UI, UI_Pop() pops it
			* Up to MAX_UIs (32) UIs can be stacked currently
			* You can't push the same UI to the stack twice in a row (in order to prevent bugs), but you can stack the same UI twice non-consecutively.
	* Began work on a new main menu to replace the old one
		* This is not very functional right now but can be toggled using +ui_newmenu 1
	* Updated PDJSON library to commit 78fe04b820dc8817f540bdd87fb22887e0ef3981 (February 22, 2024, and yes I'm late)
		* This fixes an issue where position tracking could go beyond the end of the JSON file by adding more checks for EOF
	* Renderer API version 11:
		* The renderer now can optionally automatically find scaled assets
		* This uses the use_scaled_assets parameters of Draw_Pic, Draw_PicStretch and Draw_PicRegion
		* The default width used for this is controlled by the r_scaled_assets_basewidth cvar
	* Master server changes:
		* The master server protocol now sends the number of players in the server directly.
		* Added an sv_debug_heartbeat cvar that sends the heartbeat every two seconds instead of five minutes. It is only present on debug builds, to remove any outside possibility of spamming the server.
	* Added the ability for the engine to detect when it is in graphics mode (i.e. if the renderer lib has been initalised yet)