@@ -1402,6 +1402,7 @@ void Qcommon_Init(int32_t argc, char** argv)
 	debug_console = Cvar_Get("debug_console", "0", CVAR_NOSET);
 #endif
 
+
 	s = va("%d.%d.%d.%d %s %s %s", ZOMBONO_VERSION_MAJOR, ZOMBONO_VERSION_MINOR, ZOMBONO_VERSION_REVISION, ZOMBONO_VERSION_BUILD, BUILD_PLATFORM, __DATE__, BUILD_CONFIG);
 	Cvar_Get("version", s, CVAR_SERVERINFO | CVAR_NOSET);
 
